--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,32 @@
   <groupId>org</groupId>
   <artifactId>opencart</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <build>
+    <pluginManagement>
+      <plugins>
+       
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.10.1</version>
+        </plugin>
+        
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M6</version>
+          <configuration>
+          	<suiteXmlFiles>
+          		<suiteXmlFile>mastersuite.xml</suiteXmlFile>
+          	</suiteXmlFiles>
+          </configuration>
+        </plugin>
+        
+        
+      </plugins>
+    </pluginManagement>
+  </build>
 
 <dependencies>
 		  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -92,5 +118,8 @@
 		</dependency>
   
   </dependencies>
+  
+  
+
   
 </project>
