--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M6</version>
+         <version>3.0.0-M7</version>
           <configuration>
           	<suiteXmlFiles>
           		<suiteXmlFile>testng.xml</suiteXmlFile>
@@ -107,6 +107,13 @@
 	    <groupId>com.aventstack</groupId>
 	    <artifactId>extentreports</artifactId>
 	    <version>5.0.9</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.projectlombok</groupId>
+	    <artifactId>lombok</artifactId>
+	    <version>1.18.24</version>
+	    <scope>provided</scope>
 	</dependency>
 	
 
