--- a/pom.xml
+++ b/pom.xml
@@ -36,23 +36,23 @@
 	<dependency>
 	    <groupId>org.seleniumhq.selenium</groupId>
 	    <artifactId>selenium-java</artifactId>
-	    <version>4.6.0</version>
+	    <version>4.15.0</version>
 	</dependency>
 
 	
 	<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
-	<dependency>
+	<!--<dependency>
 	    <groupId>io.github.bonigarcia</groupId>
 	    <artifactId>webdrivermanager</artifactId>
 	    <version>5.3.1</version>
-	</dependency>
+	</dependency>-->
 	
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 	<dependency>
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi</artifactId>
-	    <version>5.2.3</version>
+	    <version>5.2.4</version>
 	</dependency>
 
 
@@ -60,7 +60,7 @@
 	<dependency>
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi-ooxml</artifactId>
-	    <version>5.2.3</version>
+	    <version>5.2.4</version>
 	</dependency>
 	
 	
@@ -68,14 +68,14 @@
 	<dependency>
 	    <groupId>org.apache.logging.log4j</groupId>
 	    <artifactId>log4j-core</artifactId>
-	    <version>2.19.0</version>
+	    <version>2.21.1</version>
 	</dependency>
 
 	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
 	<dependency>
 	    <groupId>org.apache.logging.log4j</groupId>
 	    <artifactId>log4j-api</artifactId>
-	    <version>2.19.0</version>
+	    <version>2.21.1</version>
 	</dependency>
 
 
@@ -83,14 +83,14 @@
 	<dependency>
 	    <groupId>commons-io</groupId>
 	    <artifactId>commons-io</artifactId>
-	    <version>2.11.0</version>
+	    <version>2.15.0</version>
 	</dependency>
 
 	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 	<dependency>
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-lang3</artifactId>
-	    <version>3.12.0</version>
+	    <version>3.13.0</version>
 	</dependency>
 
 	
@@ -98,7 +98,7 @@
 	<dependency>
 	    <groupId>org.testng</groupId>
 	    <artifactId>testng</artifactId>
-	    <version>7.6.1</version>
+	    <version>7.8.0</version>
 	    <scope>test</scope>
 	</dependency>
 	
@@ -106,7 +106,7 @@
 	<dependency>
 	    <groupId>com.aventstack</groupId>
 	    <artifactId>extentreports</artifactId>
-	    <version>5.0.9</version>
+	    <version>5.1.1</version>
 	</dependency>
 	
 	<dependency>
